--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "description": "بوابة الطالب الجزائرية - مطورة من طرف Abdelghani Amrani",
   "author": "Abdelghani Amrani",
-  "homepage_url": "https://github.com/abdelghani-amrani",
+  "homepage_url": "https://github.com/ghani250za/abdelghani-amrani",
   "icons": {
     "16": "icon16.png",
     "32": "icon32.png",
